<resources>
    <string name="app_name">telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_defaukt_username">Adil Lakkhlifi</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Aккаунт</string>
    <string name="settings_default_number">+7888888888</string>
    <string name="settings_label_phone_number">нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_login">Adil Lakkhlifi</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_send">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_hint_default">------</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">----------</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="setting_toast_name_isempty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">username</string>
    <string name="settings_input_bio">bio</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="create_group">Создать группу</string>
    
    <plurals name="count_members">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="many">%d участников</item>
        <item quantity="other">%d участников</item>
    </plurals>
</resources>